several changes
